# easyloggingpp

./: .gitignore  CMakeLists.txt  Config.cmake.in  ConfigVersion.cmake.in  easyloggingppConfig.cmake.in  package.xml  patchfile
src/: easylogging++.h
